docs/7.52/md/abapinsert_report_internal.md
---
title: "INSERT REPORT - Internal Additions"
description: |
  Internal Additions These additions are for internal use only. Do not use them in application programs. Extras: 1. ... EXTENSION TYPE exttype(#!ABAP_ADDITION_1@1@) 2. ... APPENDAGE TYPE apptype(#!ABAP_ADDITION_2@2@) 3. ... STATE state(#!ABAP_ADDITION_3@3@) 4. ... OBJECT KEY key(#!ABAP_ADD
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapinsert_report_internal.htm"
abapFile: "abapinsert_report_internal.htm"
keywords: ["insert", "do", "if", "try", "class", "data", "abapinsert", "report", "internal"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [program editing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenprogram_editing.htm) →  [Dynamic Program Editing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_language_dynamic.htm) →  [ABAP Source Code](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_generic_program.htm) →  [INSERT REPORT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapinsert_report.htm) → 

INSERT REPORT - Internal Additions

Internal Additions

These additions are for internal use only.
Do not use them in application programs.

Extras:

[1\. ... EXTENSION TYPE exttype](#!ABAP_ADDITION_1@1@)
[2\. ... APPENDAGE TYPE apptype](#!ABAP_ADDITION_2@2@)
[3\. ... STATE state](#!ABAP_ADDITION_3@3@)
[4\. ... OBJECT KEY key](#!ABAP_ADDITION_4@4@)

Addition 1

... EXTENSION TYPE exttype

Effect

The content of the positions 31 to 35 (suffix 1) of the program name in prog checks the content of exttype. exttype must be a constant from the [type group](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abentype_group_1_glosry.htm "Glossary Entry") SREXT. Positions 36 to 40 (suffix 2) of prog can only contain blank characters.

Note

The additions EXTENSION TYPE and APPENDAGE TYPE are mutually exclusive.

Addition 2

... APPENDAGE TYPE apptype

Effect

The content of positions 36 to 40 (suffix 2) of the program name in prog is checked against the content of apptype. apptype must be a constant of the [type group](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abentype_group_1_glosry.htm "Glossary Entry") SREXT. The positions 31 to 35 (suffix 1) of prog must also correspond to a constant of the type group SREXT.

Note

The additions EXTENSION TYPE and APPENDAGE TYPE are mutually exclusive.

Addition 3

... STATE state

Effect

This addition determines whether the statement uses the active version or an inactive version of the repository object. state can have the values "A" (for active) and "I" (for inactive), which is checked statically if specified as a literal.

-   If the addition state is not specified, the statement accesses either
    

-   the active version of the repository object or

-   the inactive version of the repository object in the worklist of the current user. If there are no inactive versions in the worklist of the current user, the statement accesses the active version of the repository object.

Before the statement can evaluate the worklist of the current user, it must be prepared accordingly. This can be done using, for example, the function module RS\_WORKING\_AREA\_PREPARE. If the worklist is not prepared, the statement accesses the active version of the repository object.

-   If the addition state is specified, the statement accesses
    

-   the active version of the repository object if "A" is specified,

-   the inactive version of the repository object if "I" is specified. The user to which the inactive version is assigned is not important here or whether the version is part of a worklist. If there are no inactive versions, the object is not accessed and sy-subrc is set to 4.
    

Addition 4

... OBJECT KEY key

Effect

This addition can be used to specify to which entry in database table TADIR the program is assigned during a package check. key expects a data object of type PAK\_OBJECT\_KEY\_CHARONLY that refers to an entry in TADIR. During a package check, the package of the specified object is used.

Note

Many programs generated by frameworks, such as Web Dynpro ABAP, do not have their own TADIR entry, as they are subobjects of larger entities, such as class pools for classes of Web Dynpro. If a package check is performed for these programs, this addition needs to be specified so that it refers to the package it belongs to.

[Exceptions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_language_exceptions.htm)

Non-Handleable Exceptions

-   Cause: state has a value other than "A" or "I". INSERT\_REPORT\_ILLEGAL\_STATE
    Runtime error: INSERT\_REPORT\_ILLEGAL\_STATE