docs/7.57/md/abapinsert_report_internal.md
---
title: "INSERT REPORT, Internal Additions"
description: |
  These additions are for internal use only. Do not use them in application programs. Additions: 1. ... EXTENSION TYPE exttype(#!ABAP_ADDITION_1@1@) 2. ... APPENDAGE TYPE apptype(#!ABAP_ADDITION_2@2@) 3. ... STATE state(#!ABAP_ADDITION_3@3@) 4. ... OBJECT KEY key(#!ABAP_ADDITION_4@4@) Addi
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapinsert_report_internal.htm"
abapFile: "abapinsert_report_internal.htm"
keywords: ["insert", "do", "if", "try", "catch", "class", "data", "abapinsert", "report", "internal"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Program Maintenance](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenprogram_editing.htm) →  [Dynamic Program Development](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_language_dynamic.htm) →  [ABAP Source Code](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_generic_program.htm) →  [INSERT REPORT](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapinsert_report.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: INSERT REPORT, Internal Additions, ABAPINSERT_REPORT_INTERNAL, 757%0D%0A%0D%0AError:%
0D%0A%0D%0A%0D%0A%0D%0ASuggestion for improvement:)

INSERT REPORT, Internal Additions

These additions are for internal use only.
Do not use them in application programs.

Additions:

[1\. ... EXTENSION TYPE exttype](#!ABAP_ADDITION_1@1@)
[2\. ... APPENDAGE TYPE apptype](#!ABAP_ADDITION_2@2@)
[3\. ... STATE state](#!ABAP_ADDITION_3@3@)
[4\. ... OBJECT KEY key](#!ABAP_ADDITION_4@4@)

Addition 1   

... EXTENSION TYPE exttype

Effect

The content of the positions 31 to 35 (suffix 1) of the program name in prog is checked against the content of exttype. exttype must be a constant from the [type pool](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abentype_pool_glosry.htm "Glossary Entry") SREXT. Positions 36 to 40 (suffix 2) of prog can only contain blank characters.

Hint

The additions EXTENSION TYPE and APPENDAGE TYPE are mutually exclusive.

Addition 2   

... APPENDAGE TYPE apptype

Effect

The content of positions 36 to 40 (suffix 2) of the program name in prog is checked against the content of apptype. apptype must be a constant of the [type pool](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abentype_pool_glosry.htm "Glossary Entry") SREXT. The positions 31 to 35 (suffix 1) of prog must also correspond to a constant of the type pool SREXT.

Hint

The additions EXTENSION TYPE and APPENDAGE TYPE are mutually exclusive.

Addition 3   

... STATE state

Effect

This addition determines whether the statement uses the active version or an inactive version of the repository object. state can have the values "A" (for active) and "I" (for inactive), which is checked statically if specified as a literal.

-   If the addition state is not specified, the statement accesses either
    
    -   the active version of the repository object or
    -   the inactive version of the repository object in the worklist of the current user. If there are no inactive versions in the worklist of the current user, the statement accesses the active version of the repository object.
    
    Before the statement can evaluate the worklist of the current user, it must be prepared accordingly. This can be done using, for example, the function module RS\_WORKING\_AREA\_PREPARE. If the worklist is not prepared, the statement accesses the active version of the repository object.
    
-   If the addition state is specified, the statement accesses
    -   the active version of the repository object if "A" is specified,
    -   the inactive version of the repository object if "I" is specified. The user to which the inactive version is assigned is not important here or whether the version is part of a worklist. If there are no inactive versions, the object is not accessed and sy-subrc is set to 4.

Addition 4   

... OBJECT KEY key

Effect

This addition can be used to specify to which entry in database table TADIR the program is assigned during a package check. key expects a data object of type PAK\_OBJECT\_KEY\_CHARONLY that refers to an entry in TADIR. During a package check, the package of the specified object is used.

Hint

Many programs generated by frameworks, such as Web Dynpro ABAP, do not have their own TADIR entry, as they are subobjects of larger entities, such as class pools for classes of Web Dynpro. If a package check is to be performed for these programs, this addition must be specified to refer to the associated package.

[Exceptions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_language_exceptions.htm)

Uncatchable Exceptions

-   Cause: state has a value other than "A" or "I".
    Runtime error: INSERT\_REPORT\_ILLEGAL\_STATE